# faq_chatbot

./: Readme.MD  faqs.json  pyproject.toml  utils.py
faq_chatbot/: .env  faqs.json  main.py
